--- a/painta/style.css
+++ b/painta/style.css
@@ -46,6 +46,7 @@ body {
     width: 100%;
     padding: 80px 20px 60px; /* Adjust padding for visual spacing from top and bottom bars */
     text-align: center;
+    box-sizing: border-box;
 }
 h1 {
     font-size: 2.5em;
