Painta, orange style

--- a/painta/style.css
+++ b/painta/style.css
@@ -2,11 +2,12 @@ body {
     font-family: Arial, sans-serif;
     color: #333;
     margin: 0;
-    background-color: #ffffff;
+    background-color: #808080;
     display: flex;
     justify-content: center;
 }
 .body-container {
+    background-color: #fff;
     width: 100%;
     max-width: 800px;
     text-align: center;
@@ -15,9 +16,13 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
-/* Top and Bottom Bars */
+/* Top and Bottom Bars
+   gray	   efedf2
+   orange1 ffa726
+   orange2 ff9e61
+*/
 .top-bar, .bottom-bar {
-    background-color: #EFEDF2;
+    background-color: #ff9e61;
     color: #333;
     padding: 10px;
     display: flex;
@@ -44,7 +49,7 @@ body {
 /* Content Section */
 .content {
     width: 100%;
-    padding: 80px 20px 60px; /* Adjust padding for visual spacing from top and bottom bars */
+    padding: 20px 20px 0px; /* Adjust padding for visual spacing from top and bottom bars */
     text-align: center;
     box-sizing: border-box;
 }
