--- a/painta/style.css
+++ b/painta/style.css
@@ -41,6 +41,7 @@ body {
     font-size: 0.9em;
     text-align: center;
     margin-top: auto;
+    font-style: italic;
 }
 .menu-icon {
     font-size: 1.5em;
